--- a/boltz.conf
+++ b/boltz.conf
@@ -26,15 +26,15 @@ maxZeroConfAmount = 10_000_000
   [currencies.chain]
   host = "127.0.0.1"
   port = 18_443
-  cookie = "docker/regtest/data/core/cookies/.bitcoin-cookie"
+  cookie = "../lnstxbridge/docker/regtest/data/core/cookies/.bitcoin-cookie"
   rpcuser = "kek"
   rpcpass = "kek"
 
   [currencies.lnd]
   host = "127.0.0.1"
   port = 10_009
-  certpath = "docker/regtest/data/lnd/certificates/tls.cert"
-  macaroonpath = "docker/regtest/data/lnd/macaroons/admin.macaroon"
+  certpath = "~/.lnstx-client/lnd/tls.cert"
+  macaroonpath = "~/.lnstx-client/lnd/admin.macaroon"
 
 [stacks]
 # mainnet
