lnstxbridge-client started!

--- a/boltz.conf
+++ b/boltz.conf
@@ -33,8 +33,8 @@ maxZeroConfAmount = 10_000_000
   [currencies.lnd]
   host = "127.0.0.1"
   port = 10_009
-  certpath = "~/.lnstx-client/lnd/tls.cert"
-  macaroonpath = "~/.lnstx-client/lnd/admin.macaroon"
+  certpath = "/home/gitpod/.lnstx-client/lnd/tls.cert"
+  macaroonpath = "/home/gitpod/.lnstx-client/lnd/admin.macaroon"
 
 [stacks]
 # mainnet
@@ -46,7 +46,7 @@ maxZeroConfAmount = 10_000_000
 # stxSwapAddress = "ST15RGYVK9ACFQWMFFA2TVASDVZH38B4VAV4WF6BJ.stxswap_v3"
 
 # mocknet
-providerEndpoint = "http://localhost:3999"
+providerEndpoint = "https://stacks-node-api.mainnet.stacks.co"
 stxSwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.stxswap_v8"
 sip10SwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.sip10swap_v1"
 
