--- a/boltz.conf
+++ b/boltz.conf
@@ -46,7 +46,9 @@ maxZeroConfAmount = 10_000_000
 # stxSwapAddress = "ST15RGYVK9ACFQWMFFA2TVASDVZH38B4VAV4WF6BJ.stxswap_v3"
 
 # mocknet
-providerEndpoint = "https://stacks-node-api.mainnet.stacks.co"
+# providerEndpoint = "https://stacks-node-api.mainnet.stacks.co"
+# providerEndpoint = "https://stacks-node-api.testnet.stacks.co"
+providerEndpoint = "http://localhost:3999"
 stxSwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.stxswap_v8"
 sip10SwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.sip10swap_v1"
 
