--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,17 +1,9 @@
 version: "3.9"
 services:
-  lnstxbridge_api:
-    image: pseudozach/lnstxbridge:latest
+  lnstxbridge_client:
+    image: pseudozach/lnstxbridge-client:latest
     ports:
-      - "9002:9002"
+      - "9003:9003"
     volumes:
-      - ./lnstx/:/root/.lnstx/
-  lnstxbridge_frontend:
-    image: pseudozach/lnstxbridge-frontend:latest
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend/.env:/usr/src/app/.env
-    depends_on:
-      - lnstxbridge_api
+      - ./lnstx-client/:/root/.lnstx-client/
     
