--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -1,4 +1,6 @@
 prepayMinerFee=true
+aggregatorUrl="http://localhost:9002"
+providerUrl="http://localhost:9003"
 
 # Backend supports sending messages to Discord after successful and failed
 # Swaps and if the wallet or channel balance is underneath a configurable threshold 
@@ -76,7 +78,6 @@ sip10SwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.sip10swap_v1"
 
   [[stacks.tokens]]
   symbol = "STX"
-
   maxSwapAmount = 1_294_967000
   minSwapAmount = 10000
 
