update client docker config template for mainnet

--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -48,7 +48,7 @@ timeoutDelta = 1_240
 
 [[currencies]]
 symbol = "BTC"
-network = "bitcoinRegtest"
+network = "bitcoinMainnet"
 minChannelBalance = 1_000_000
 minSwapAmount = 10_000
 maxSwapAmount = 4_294_967
@@ -60,21 +60,21 @@ maxWalletBalance = 300_000
 
   [currencies.chain]
   host = "127.0.0.1"
-  port = 18_443
-  cookie = "docker/regtest/data/core/cookies/.bitcoin-cookie"
+  port = 8_332
+  cookie = "/root/.bitcoin/.cookie"
   rpcuser = "kek"
   rpcpass = "kek"
 
   [currencies.lnd]
   host = "127.0.0.1"
   port = 10_009
-  certpath = "docker/regtest/data/lnd/certificates/tls.cert"
-  macaroonpath = "docker/regtest/data/lnd/macaroons/admin.macaroon"
+  certpath = "/root/.lnd/tls.cert"
+  macaroonpath = "/root/.lnd/data/chain/bitcoin/mainnet/admin.macaroon"
 
 [stacks]
-providerEndpoint = "http://localhost:3999"
-stxSwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.stxswap_v8"
-sip10SwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.sip10swap_v1"
+providerEndpoint = "https://stacks-node-api.mainnet.stacks.co"
+stxSwapAddress = "SP2507VNQZC9VBXM7X7KB4SF4QJDJRSWHG4V39WPY.stxswap_v8"
+sip10SwapAddress = "SP2507VNQZC9VBXM7X7KB4SF4QJDJRSWHG4V39WPY.sip10swap_v1"
 
   [[stacks.tokens]]
   symbol = "STX"
