disable usda by default

--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -32,7 +32,7 @@ autoBalance = false
 
 [dashboard]
 username = "admin"
-password = "admin"
+password = "changeme!!!"
 
 [[pairs]]
 base = "BTC"
@@ -40,11 +40,12 @@ quote = "STX"
 fee = 5
 timeoutDelta = 1_240
 
-[[pairs]]
-base = "BTC"
-quote = "USDA"
-fee = 5
-timeoutDelta = 1_240
+# comment out to disable
+# [[pairs]]
+# base = "BTC"
+# quote = "USDA"
+# fee = 5
+# timeoutDelta = 1_240
 
 [[currencies]]
 symbol = "BTC"
@@ -83,7 +84,6 @@ sip10SwapAddress = "SP2507VNQZC9VBXM7X7KB4SF4QJDJRSWHG4V39WPY.sip10swap_v1"
 
   [[stacks.tokens]]
   symbol = "USDA"
-
   maxSwapAmount = 1_294_967000
   minSwapAmount = 10000
   contractAddress = "SP2C2YFP12AJZB4MABJBAJ55XECVS7E4PMMZ89YZR.usda-token"
