adjust docker conf for umbrel

--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -62,15 +62,15 @@ maxWalletBalance = 300_000
   [currencies.chain]
   host = "127.0.0.1"
   port = 8_332
-  cookie = "/root/.lnstx-client/.cookie"
+  # cookie = "/root/.lnstx-client/.cookie"
   rpcuser = "kek"
   rpcpass = "kek"
 
   [currencies.lnd]
   host = "127.0.0.1"
   port = 10_009
-  certpath = "/root/.lnstx-client/lnd-tls.cert"
-  macaroonpath = "/root/.lnstx-client/admin.macaroon"
+  certpath = "/lnd/tls.cert"
+  macaroonpath = "/lnd/data/chain/bitcoin/mainnet/admin.macaroon"
 
 [stacks]
 providerEndpoint = "https://stacks-node-api.mainnet.stacks.co"
