--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -17,7 +17,6 @@ services:
       BITCOIN_RPC_PASS: $BITCOIN_RPC_PASS
       LND_IP: $LND_IP 
       LND_GRPC_PORT: $LND_GRPC_PORT
-      AGGREGATOR_URL: $APP_HIDDEN_SERVICE
   dashboard:
     container_name: lnstxbridge-dashboard
     image: pseudozach/lnstxbridge-dashboard:latest
@@ -26,4 +25,4 @@ services:
     ports:
       - "9009:3000"
     environment:
-      PROVIDER_URL: $APP_HIDDEN_SERVICE
+      NEXT_PUBLIC_BACKEND_URL: "$APP_LNSTXBRIDGE_IP:9008"
