update default conf

--- a/boltz.conf
+++ b/boltz.conf
@@ -2,6 +2,38 @@ prepayMinerFee=true
 aggregatorUrl="http://localhost:9002"
 providerUrl="http://localhost:9008"
 
+# Backend supports sending messages to Discord after successful and failed
+# Swaps and if the wallet or channel balance is underneath a configurable threshold 
+# 1. create a bot at https://discord.com/developers/applications
+# 2. add the bot to any private channel in your discord server
+# 3. give bot sendmessage access and copy/paste token here
+[notification]
+token = ""
+channel = "secret-lnswapbot-channel"
+prefix = "lns"
+# Interval in minutes at which the wallet and channel balances should be checked 
+interval = 10
+# Some Discord commands (like withdraw) require a TOTP token
+# This is the path to the secret of that TOTP token
+otpsecretpath = "/home/workspace/.lnstx-client/otpSecret.dat"
+
+# Backend supports balancing account funds via centralized exchange (currently OKCoin)
+# Both automated and on-demand balancing is supported
+[balancer]
+apiUri = "https://www.okcoin.com"
+apiKey = ""
+secretKey = ""
+passphrase = ""
+tradePassword = ""
+minSTX = 10
+minBTC = 1000000
+overshootPercentage = 0
+autoBalance = false
+
+[dashboard]
+username = "admin"
+password = "admin"
+
 [[pairs]]
 base = "BTC"
 quote = "STX"
