--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boltz-backend",
-  "version": "3.1.1",
-  "description": "Backend of Boltz",
+  "name": "lnstxbridge-client",
+  "version": "1.0.0",
+  "description": "Provider client for LN-STX Bridge",
   "main": "dist/lib/Boltz.js",
   "scripts": {
     "postinstall": "npm run precompile",
@@ -53,7 +53,7 @@
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BoltzExchange/boltz-backend"
+    "url": "git+https://github.com/pseudozach/lnstxbridge-client"
   },
   "files": [
     "bin",
