--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H-%M')"
+
+      - name: Get current package version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
+
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -39,4 +44,4 @@ jobs:
           push: true
           tags: |
             pseudozach/lnstxbridge-client:latest
-            pseudozach/lnstxbridge-client:${{ steps.date.outputs.date }}
+            pseudozach/lnstxbridge-client:${{ steps.package-version.outputs.current-version}}
