--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,12 +16,13 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H-%M')"
 
-      - uses: gagle/package-version@v1.0.0
-        id: package-version
-
       -
         name: Checkout
         uses: actions/checkout@v2
+
+      - name: Get current package version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
+
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -43,4 +44,4 @@ jobs:
           push: true
           tags: |
             pseudozach/lnstxbridge-client:latest
-            pseudozach/lnstxbridge-client:${{ steps.package-version.outputs.version }}
+            pseudozach/lnstxbridge-client:${{ steps.package-version.outputs.current-version }}
