--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get current package version
+        id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.1.0
 
       -
