--- a/package.json
+++ b/package.json
@@ -76,14 +76,16 @@
     "@stacks/transactions": "^3.1.0",
     "async-lock": "^1.3.0",
     "axios": "^0.21.1",
-    "bip32": "^2.0.6",
+    "bip32": "^3.0.1",
+    "bip322": "npm:bip32@^2.0.6",
     "bip39": "^3.0.4",
-    "bitcoinjs-lib": "^5.2.0",
-    "boltz-core": "^0.4.1",
+    "bitcoinjs-lib": "^6.0.1",
+    "boltz-core": "^0.5.0",
     "cors": "^2.8.5",
     "cross-os": "^1.4.0",
     "discord.js": "^12.5.3",
     "diskusage": "^1.1.3",
+    "ecpair": "^2.0.1",
     "ethers": "~5.3.0",
     "express": "^4.17.1",
     "google-protobuf": "^3.17.1",
