add comment to conf limits

--- a/boltz.conf
+++ b/boltz.conf
@@ -87,6 +87,7 @@ sip10SwapAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.sip10swap_v3"
   [[stacks.tokens]]
   symbol = "STX"
 
+# allow swaps between 1 and 129 STX
   maxSwapAmount = 1_294_967000
   minSwapAmount = 10000
 
