add xusd to docker-compose conf

--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -37,14 +37,20 @@ password = "changeme!!!"
 [[pairs]]
 base = "BTC"
 quote = "STX"
-fee = 5
+fee = 3
 timeoutDelta = 1_240
 
 # comment out to disable
 # [[pairs]]
 # base = "BTC"
 # quote = "USDA"
-# fee = 5
+# fee = 3
+# timeoutDelta = 1_240
+
+# [[pairs]]
+# base = "BTC"
+# quote = "XUSD"
+# fee = 3
 # timeoutDelta = 1_240
 
 [[currencies]]
@@ -88,3 +94,14 @@ sip10SwapAddress = "SP2507VNQZC9VBXM7X7KB4SF4QJDJRSWHG4V39WPY.sip10swap_v3"
   minSwapAmount = 10000
   contractAddress = "SP2C2YFP12AJZB4MABJBAJ55XECVS7E4PMMZ89YZR.usda-token"
   decimals = 6
+
+  [[stacks.tokens]]
+  symbol = "XUSD"
+
+  maxSwapAmount = 8_294_967000
+  minSwapAmount = 10000
+  # mocknet
+  contractAddress = "ST30VXWG00R13WK8RDXBSTHXNWGNKCAQTRYEMA9FK.Wrapped-USD"
+  # mainnet
+  # contractAddress = "SP2TZK01NKDC89J6TA56SA47SDF7RTHYEQ79AAB9A.Wrapped-USD"
+  decimals = 8
