--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -62,8 +62,8 @@ maxSwapAmount = 4_294_967
 maxZeroConfAmount = 10_000_000
 minLocalBalance = 1_000_000
 minRemoteBalance = 1_000_000
-minWalletBalance = 10_000_000
-maxWalletBalance = 300_000
+minWalletBalance = 1_000_000
+maxWalletBalance = 30_000_000
 
   [currencies.chain]
   host = "127.0.0.1"
