feat(circuit breaker) add circuitBreakerThreshold to config get balances from before, normalize it and compare in btc terms stop registering to aggregator if circuit breaker is active add circuitBreakerThreshold to conf file

--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -1,6 +1,9 @@
 prepayMinerFee=true
 aggregatorUrl="https://api.lnswap.org:9007"
 providerUrl="http://localhost:9008"
+# If this % of total funds in the LP client are missing compared to 24h ago, LP will stop serving swaps.
+# Requires restart to recover from circuit breaker.
+circuitBreakerThreshold=25 
 
 # Backend supports sending messages to Discord after successful and failed
 # Swaps and if the wallet or channel balance is underneath a configurable threshold 
