add mempool.space api to conf files

--- a/boltz.conf
+++ b/boltz.conf
@@ -70,6 +70,7 @@ maxZeroConfAmount = 10_000_000
   cookie = "../lnstxbridge/docker/regtest/data/core/cookies/.bitcoin-cookie"
   rpcuser = "kek"
   rpcpass = "kek"
+  mempoolSpace = "https://mempool.space/testnet/api"
 
   [currencies.lnd]
   host = "127.0.0.1"
