--- a/docker-compose/lnstx-client/boltz.conf
+++ b/docker-compose/lnstx-client/boltz.conf
@@ -74,6 +74,7 @@ maxWalletBalance = 300_000
   # cookie = "/root/.lnstx-client/.cookie"
   rpcuser = "kek"
   rpcpass = "kek"
+  mempoolSpace = "https://mempool.space/api"
 
   [currencies.lnd]
   host = "127.0.0.1"
